--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Projeto Redes Social</title>
 </head>
 <body>
-    
+    <h1>Ola mundo</h1>
+    <section id="tela" name="tela">
+
+    </section>
+    <section id="redes-sociais" name="redes-sociais">
+
+    </section>
 </body>
 </html>
